=== 0.3.34 2013-08-24

* Converted the customer call, review, email invitation and review challenge proxy models to use the collection object.
* Added Collection object to handle index calls that return meta-data.

=== 0.3.33 2013-07-24

* Added review_suggestion model.

=== 0.3.32 2013-07-23

* Added additional attributes to the customer call proxy model.

=== 0.3.31 2013-07-22

* Added the timezone field to the company proxy model.

=== 0.3.30 2013-07-19

* Added more associations to company and customer call proxy model.

=== 0.3.29 2013-07-19

* Added company and contact attributes to the customer call proxy model.

=== 0.3.28 2013-07-19

* Added tests for the customer call proxy model.
* Added the count meta attribute to the customer call proxy model.

=== 0.3.27a 2013-07-22

* Added the timezone field to the company proxy model.

=== 0.3.27 2013-07-18

* Added the CustomerCall proxy model.

>>>>>>> origin/customer_calls
=== 0.3.26 2013-07-17

* change the field name key to email_key for email_invitations model

=== 0.3.25 2013-07-15

* Add email_key and accessed_at to EmailInviation model

=== 0.3.24 2013-07-12

* Fixed argument error with ClientError.

=== 0.3.23 2013-07-11

* Added the last message to the Unauthorized exception.

=== 0.3.22 2013-07-10

* removed the discontinue method and added update

=== 0.3.21 2013-07-09

* code for default_promos list to lobbyist.

=== 0.3.20 2013-07-08

* Add promo and account_level to lobbyist.

=== 0.3.19 2013-07-04

* Add promo and account_level to lobbyist.

=== 0.3.18 2013-07-03

* Add email_invitation_id to review model.

=== 0.3.17 2013-07-03

* Fix problem with ChallengeCommunication review challenge reference.

=== 0.3.16 2013-07-03

* Add CompanyUser.primary call to get the companies primary user.

=== 0.3.15 2013-07-02

* update TerminationNotice model with the new model
* update the tests accordingly

=== 0.3.14 2013-07-02

* Add company_id and contact_id back into the Review modal as simple attributes when